testdata/baselines/reference/submodule/compiler/thisInFunctionCallJs.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
/a.js(4,14): error TS2339: Property 'data' does not exist on type 'Test'.
/a.js(8,14): error TS2339: Property 'data' does not exist on type 'Test'.
/a.js(9,26): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(14,14): error TS2339: Property 'data' does not exist on type 'Test'.
/a.js(15,13): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
/a.js(15,31): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(20,14): error TS2339: Property 'data' does not exist on type 'Test'.
/a.js(23,13): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
/a.js(23,31): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(28,14): error TS2339: Property 'data' does not exist on type 'Test'.
/a.js(31,26): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== /a.js (11 errors) ====
    class Test {
        constructor() {
            /** @type {number[]} */
            this.data = [1, 2, 3];
                 ~~~~
!!! error TS2339: Property 'data' does not exist on type 'Test'.
        }
    
        finderRaw() {
            this.data.find(function (d) {
                 ~~~~
!!! error TS2339: Property 'data' does not exist on type 'Test'.
                return d === this.data.length
                             ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:8:24: An outer value of 'this' is shadowed by this container.
            })
        }
    
        forEacherRaw() {
            this.data.forEach(function (d) {
                 ~~~~
!!! error TS2339: Property 'data' does not exist on type 'Test'.
                console.log(d === this.data.length)
                ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
                                  ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:14:27: An outer value of 'this' is shadowed by this container.
            })
        }
    
        forEacher() {
            this.data.forEach(
                 ~~~~
!!! error TS2339: Property 'data' does not exist on type 'Test'.
            /** @this {Test} */
            function (d) {
                console.log(d === this.data.length)
                ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
                                  ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:22:9: An outer value of 'this' is shadowed by this container.
            }, this)
        }
    
        finder() {
            this.data.find(
                 ~~~~
!!! error TS2339: Property 'data' does not exist on type 'Test'.
            /** @this {Test} */
            function (d) {
                return d === this.data.length
                             ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:30:9: An outer value of 'this' is shadowed by this container.
            }, this)
        }
    }
    